<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Configuración</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="Acercade_desc">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
    <string name="configuracion">Configuración</string>
    
    <string name="Reproducir_musica">Reproducir música</string>
    <string name="Reproducir_musica_resumen">Se reproduce música de fondo</string>
    <string name="Tipo_graficos">Tipo de gráficos</string>
    <string name="Tipo_graficos_resumen">Se escoge la representación de gráficos</string>
    <string name="Numero_fragmentos">Número de Fragmentos</string>
    <string name="Numero_fragmentos_resumen">En cuantos trozos se divide un asteroide</string>
    <string name="Preferencias">Preferencias</string>
    
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="No_puntuaciones">No hay puntuaciones</string>
    
    <string name="Description_asteroid">Imagen de asteroide</string>
    
    <string name="otro_texto">Otro Texto</string>

</resources>