<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"

    android:layout_width="fill_parent"

    android:layout_height="fill_parent"

    android:gravity="center"

    android:padding="30dip"

    tools:context=".Asteroides" >

  <TextView style="@style/TextoAsteroides"
      android:text="@string/tituloAplicacion"/>

  <Button android:id="@+id/bArrancar" style="@style/TextoAsteroides.Botones"
      android:text="@string/Arrancar"/>

  <Button
      android:id="@+id/bConfigurar"
      style="@style/TextoAsteroides.Botones"
      android:text="@string/Configurar"
      android:onClick="lanzarPreferencias"/>

  <Button
      android:id="@+id/bAcercaDe"
      style="@style/TextoAsteroides.Botones"
      android:onClick="lanzarAcercaDe"
      android:text="@string/Acercade" />

  <Button
      android:id="@+id/bSalir"
      style="@style/TextoAsteroides.Botones"
      android:onClick="salir"
      android:text="@string/Salir" />

  </LinearLayout>